<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_title"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="@color/black"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="90dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:scaleType="centerCrop"
            android:src="@drawable/oip" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fullname"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:id="@+id/editTextTextPersonName"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name_edittext"
        android:gravity="center"
        />
    <TextView
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email"
    android:gravity="center"
    android:textSize="20dp"
        android:inputType="textEmailAddress"
    android:layout_gravity="center"
    android:textColor="@color/black"
    />

    <EditText

        android:id="@+id/edittextemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edittext"

        android:gravity="center"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edittext"
        android:id="@+id/passwordEditText"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:gravity="center"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/password_confirm"
    android:textSize="20dp"
    android:textColor="@color/black"
    android:layout_gravity="center"

    android:layout_marginLeft="10dp"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:id="@+id/confirm_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:gravity="center"
        />

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="20dip"-->
<!--        android:text="submit"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:textSize="20dp" />-->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        app:cornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:text="@string/submit" />



</LinearLayout>