<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayEmailActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/text_fullname"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_email"
        android:text="@string/email"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="center"
        android:background="#170909"
        android:textColor="#FF0000"
        android:layout_margin="20dp"

        />
</LinearLayout>